Fix setting css-wide keywords on registered custom properties

This patch fixes setting of css-wide keywords on registered custom
properties, which was broken by crrev.com/2607403002.

BUG=679627

Review-Url: https://codereview.chromium.org/2624213004
Cr-Commit-Position: refs/heads/master@{#443204}

Former-commit-id: 9b7705c2d31d7536d7fee713c24fd598a62b63c7